# public-cloud-experiments

./: .gitignore  .gitleaks.toml  .gitmodules  .markdownlint.yaml  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  GRAFANA-SWITCH-PLAN.md  Makefile  README.md  next-steps.md  setup-security.sh
.claude/: settings.local.json
.git-hooks/: check-emojis.sh
.gitea/workflows/: .ci-trigger  azure-auth-sim.yaml
.github/workflows/: README.md  secret-scanning.yml  subnet-calculator-infra-tests.yml  swa-byo-functions.yml  swa-byo-functions.yml.disabled  swa-managed-functions.yml  terraform-security.yml
api-apim-simulator/: Dockerfile  pyproject.toml
api-fastapi-azure-function/: .dockerignore  README.md  auth.py  config.py  host.json  requirements.txt  test_apim.py  test_endpoints.sh  test_function_app.py  test_jwt.py
cloud-networking/azure/: 01-azure-simple-vnet.sh  02-azure-simple-network.sh  03-azure-network-aci.sh  05-container-instances.sh  06-container-tests.sh  07-vm.sh  08-nftables.sh  09-custom-containers.sh  10-nsg-demo.sh  11-nsg-test.sh  12-private-vm.sh  13-private-vm-tests.sh  14-nva-routing.sh  15-nva-tests.sh  Makefile  NVA-FORWARDING-RESEARCH.md  README.md  nftables-config.yaml  nginx-custom-page.sh  resource-container-custom.sh  resource-container-instance.sh  resource-nsg-rule.sh  resource-nsg.sh  resource-route-table.sh  resource-route.sh  resource-subnet.sh  resource-virtual-machine.sh  resource-vnet.sh  setup-env.sh
docs/plans/: 2025-10-30-application-gateway-swa-private-endpoint.md  2025-10-30-keyvault-app-registration-secrets-design.md  2025-10-30-keyvault-app-registration-secrets.md
frontend-react/: Dockerfile.server  biome.json  nginx.conf  playwright.stack12.config.ts  server.js
frontend-react/src/: App.tsx  config.ts  main.tsx
frontend-react/tests/: stack12-auth.spec.ts
scripts/markdown/: README.md  fix-all-docs.sh  fix-bold-h1.sh  fix-duplicate-h1.sh  fix-image-alt-text.sh  fix-ordered-lists.sh  fix-step-headings.py  remove-emojis.py  report-markdownlint-issues.sh
sentiment-llm/: compose.yml
sentiment-llm/api-sentiment/: .dockerignore  Dockerfile  package-lock.json  package.json  server.js  telemetry.js
sentiment-llm/data/: comments.csv
sentiment-llm/edge/: nginx.conf
sentiment-llm/frontend-typescript-vite/: biome.json  package-lock.json  package.json  playwright.kind-local.config.ts  tsconfig.json
sentiment-llm/keycloak/: realm-export.json  start-with-templated-realm.sh
shared-frontend/: biome.json  package.json
shared-frontend/coverage/: lcov.info
shared-frontend/src/: index.ts
subnet-calculator/: .gitignore  AUTHENTICATION-OPTIONS.md  Makefile  NEXT-STEPS-CONTAINER-APP.md  README.md  SECURITY-INSPECTION.md  SWA-CLI.md  SWA-ENTRA-AUTH.md  TESTING.md  compose.azurite.yml  compose.yml  docker-compose.yml  package.json  start-api-azure-function.sh  start-api-container-app.sh  staticwebapp.config.json  swa-cli.config.json
subnet-calculator/api-apim-simulator/: Dockerfile  pyproject.toml  test_smoke.py
subnet-calculator/api-fastapi-azure-function/: .gitignore  CLAUDE.md  Dockerfile  README.md  auth.py  cloudflare_ips.py  compose.azurite.yml  compose.yml  config.py  function_app.py  host.json  pyproject.toml  requirements.txt  test_apim.py  test_auth.py  test_auth.sh  test_azure_swa.py  test_cloudflare_ips.py  test_cors_and_headers.py  test_function_app.py  test_jwt.py
subnet-calculator/api-fastapi-container-app/: .dockerignore  Dockerfile  README.md  compose.yml  docker-compose.yml  pyproject.toml  test_endpoints.sh
subnet-calculator/api-fastapi-container-app/app/: __init__.py  auth.py  auth_utils.py  cloudflare_ips.py  config.py  main.py
subnet-calculator/api-fastapi-container-app/app/models/: subnet.py
subnet-calculator/api-fastapi-container-app/app/routers/: auth.py  health.py  subnets.py
subnet-calculator/api-fastapi-container-app/tests/: conftest.py  test_auth.py  test_cloudflare_ips.py  test_cors_and_headers.py  test_main.py  test_subnets.py
subnet-calculator/blog/: capture-screenshots.ts
subnet-calculator/bruno-collections/: .gitignore  README.md  bruno.json
subnet-calculator/csharp-test/: DEPLOYMENT-NOTES.md  compose.yml
subnet-calculator/docs/: 2025-10-30-application-gateway-https-keyvault-design.md  2025-10-30-application-gateway-swa-private-endpoint-design.md  2025-10-30-application-gateway-swa-private-endpoint.md  2025-10-30-keyvault-app-registration-secrets-design.md  AKSAuthentication.md  AUTHENTICATION-OPTIONS.md  AUTHENTICATION.md  AZURE_DEPLOYMENT.md  AuthenticationPatterns.md  AzureEasyAuthSupport.md  COMPLETION_REPORT.md  DEBUGGING-EASY-AUTH.md  DNS-CONFIGURATION.md  EASY-AUTH-RESEARCH.md  ENTRA-ID-LOCAL-TESTING.md  ENTRAID-IMPLEMENTATION-PLAN.md  ENTRAID-SETUP-GUIDE.md  ENTRAID-TESTING-PLAN.md  FLEX-CONSUMPTION.md  HOSTING-MATRIX.md  IMPLEMENTATION-PLAN.md  NEXT-STEPS-CONTAINER-APP.md  PRODUCTION-DEPLOYMENT.md  README-SWA-CONFIG.md  SANDBOX-TESTING-GUIDE.md  SECURITY-INSPECTION.md  STACK-1-JWT-AUTH.md  STACK-17-18-COMPARISON.md  STACK-2-ENTRAID-LINKED.md  STACK-3-PRIVATE-ENDPOINT.md  STACK-DEPLOYMENT-PLAN.md  STACK_INTENTIONS.md  SWA-AUTHENTICATION-ARCHITECTURES.md  SWA-CLI.md  SWA-ENTRA-AUTH.md  SWA-FUNCTIONS-GUIDE.md  Stack12-OAuth2Proxy.md  TESTING-GUIDE.md  TESTING.md  TEST_SPECIFICATION.md  (+7 more)
subnet-calculator/frontend-html-static/: .dockerignore  Dockerfile  Makefile  README.md  compose.yml  conftest.py  index.html  nginx.conf  pyproject.toml  serve.py  test_frontend.py
subnet-calculator/frontend-html-static/css/: style.css
subnet-calculator/frontend-html-static/js/: app.js  config.js
subnet-calculator/frontend-python-flask/: .dockerignore  .env.example  .gitignore  Dockerfile  EASY-AUTH-SETUP.md  ENTRAID.md  ENV-SETUP.md  IMPLEMENTATION-SUMMARY.md  Makefile  README-ENTRAID.md  README.md  SETUP-CHECKLIST.md  app.py  auth.py  compose.yml  conftest.py  pyproject.toml  test_frontend.py
subnet-calculator/frontend-python-flask/static/: style.css
subnet-calculator/frontend-python-flask/templates/: index.html
subnet-calculator/frontend-react/: .dockerignore  Dockerfile  Makefile  (+10 more)
(+784 files in other folders)
