[project]
name = "subnet-calculator-python-api"
version = "0.1.0"
description = "IPv4/IPv6 subnet validation and analysis API with cloud provider support"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "azure-functions>=1.23.0",
    "fastapi[standard]>=0.118.0",
    "pwdlib[argon2]>=0.2.0",
    "pyjwt>=2.10.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]
