[project]
name = "subnet-calculator-flask-frontend"
version = "0.1.0"
description = "Modern web frontend for IPv4 subnet calculator with cloud provider support"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.2",
    "gunicorn>=23.0.0",
    "requests>=2.32.5",
    "msal>=1.34.0",
    "flask-session>=0.8.0",
    "cryptography>=43.0.0",
]

[dependency-groups]
dev = [
    "playwright>=1.55.0",
    "pytest-playwright>=0.7.1",
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
